changed portrait image settings to try to fix bug that stretches image to full container height on iPhone is fixed value is given

--- a/assets/styles.css
+++ b/assets/styles.css
@@ -116,7 +116,8 @@ nav p:hover {
 p img {
     margin-top:30px;
     width:100px;
-    height:100px;
+    height:auto;
+    align-self:flex-start;
 }
 
 .item1 {grid-column: narrative;}
